syntax = "proto3";

package tieba;

option java_package = "com.huanchengfly.tieba.post.api.models.protos";

message FrsTabInfo {
  int32 tabId = 1;
  int32 tabType = 2;
  string tabName = 3;
  string tabUrl = 4;
  string tabGid = 5;
  string tabTitle = 6;
  int32 isGeneralTab = 7;
  string tabCode = 8;
  uint32 tabVersion = 9;
  int32 isDefault = 10;
}